Fixed too high images off screen in fullscreen view

--- a/admin/styles/userSubview.css
+++ b/admin/styles/userSubview.css
@@ -53,54 +53,6 @@
 	background-color: #ffffff;
 }
 
-.thumbnailContainer
-{
-	display: inline-block;
-	margin-top: 50px;
-	position: relative;
-	text-align: center;
-	width: 256px;
-}
-
-.buttonContainer
-{
-	display: inline-block;
-	position: relative;
-	width: fit-content;
-}
-
-.thumbnailImage
-{
-	cursor: pointer;
-	transform: scale(0.9);
-	transition: transform ease 0.15s;
-	vertical-align: middle;
-}
-
-.thumbnailImage:hover
-{
-	transform: scale(1.0);
-}
-
-.deleteImage
-{
-	bottom: 5%;
-	margin-bottom: 6px;
-	margin-right: 8px;
-	position: absolute;
-	right: 5%;
-}
-
-.previewImage
-{
-	bottom: 0;
-	left: 0;
-	margin: auto;
-	position: absolute;
-	right: 0;
-	top: 0;
-}
-
 #roleSelect
 {
 	margin-bottom: 60px;
